--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application" %>
+    <%= stylesheet_link_tag "phlexible_calendar/application" %>
+    <%= javascript_include_tag "phlexible_calendar/application" %>
   </head>
 
   <body>
